# rustygear

./: .gitignore  .travis.yml  Cargo.toml  README.md
.github/workflows/: ci.yml
rustygear/: Cargo.toml  README.md
rustygear/examples/: client.rs  multiserver.rs  tlsclient.rs  worker.rs
rustygear/src/: admin.rs  client.rs  client_service.rs  clientdata.rs  codec.rs  conn.rs  constants.rs  error.rs  job.rs  lib.rs  main.rs  queues.rs  server.rs  service.rs  util.rs  worker.rs  wrappedstream.rs
rustygear/tests/: admin.rs  client.rs  packet.rs
rustygeard/: Cargo.toml  README.md
rustygeard/examples/: client.rs  worker.rs
rustygeard/src/: admin.rs  client.rs  lib.rs  main.rs  queues.rs  server.rs  service.rs  testutil.rs  util.rs  worker.rs
rustygeard/tests/: admin.rs  client.rs  errors.rs  packet.rs  server.rs
scripts/: admin.sh  basic.sh  coalesce.sh  manyjobs.sh  roundrobin.sh  toomanyjobs.sh
src/: admin.rs  base.rs  codec.rs  connection.rs  constants.rs  job.rs  lib.rs  main.rs  oldbase.rs  packet.rs  proto.rs  queues.rs  server.rs  service.rs  transport.rs  util.rs  worker.rs
tests/: admin.rs  packet.rs
