[package]
name = "rustygear"
version = "0.2.0"
authors = ["Clint Byrum <clint@fewbar.com>"]

[dependencies]
time = "0.1"
byteorder = "0.3"
bytes = "*"
uuid = { version = "*", features = ["v4"] }
hash_ring = "*"
log = "*"
env_logger = "*"
mio = "0.6"
wrappinghashset = { git = "https://github.com/SpamapS/wrappinghashset.git" }
