[package]
name = "rustygear"
version = "0.4.0"
authors = ["Clint Byrum <clint@fewbar.com>"]

[dependencies]
time = "0.1"
bytes = "*"
hash_ring = "*"
log = "*"
env_logger = "*"
mio = "0.6"
wrappinghashset = { git = "https://github.com/SpamapS/wrappinghashset.git" }
tokio-core = "*"
tokio-io = "*"
tokio-service = "*"
futures = "*"
