[package]
name = "rustygear"
description = "Client library for communicating via the gearman protocol"
homepage = "https://github.com/SpamapS/rustygear"
version = "0.7.0"
authors = ["Clint Byrum <clint@fewbar.com>"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
bytes = ">=0.5.0"
hash_ring = "*"
log = "*"
env_logger = "*"
futures = "*"
tokio = { version = "0.2", features = ["full"] }
tokio-util = { version = "*", features = ["codec"] }
uuid = { version = "*", features = ["v4"] }
