[package]
name = "rustygear"
description = "Client library for communicating via the gearman protocol"
homepage = "https://github.com/SpamapS/rustygear"
version = "0.10.0"
authors = ["Clint Byrum <clint@fewbar.com>"]
license = "Apache-2.0"
edition = "2018"
keywords = ["gearman", "client"]

[dependencies]
bytes = ">=1.1.0"
hash_ring = ">=0.1.7"
log = ">=0.4.8"
env_logger = { version = ">=0.10.1", features = ["auto-color","humantime"] }
futures = ">=0.3.4"
tokio = { version = "1.15.0", features = ["full"] }
tokio-util = { version = "0.6.9", features = ["codec"] }
uuid = { version = "0.8", features = ["v4"] }
