[package]
name = "rustygeard"
description = "An experimental, full-featured gearman server."
version = "0.11.0"
authors = ["Clint Byrum <clint@fewbar.com>"]
license = "Apache-2.0"
edition = "2018"
keywords = ["gearman", "server"]
homepage = "https://github.com/SpamapS/rustygear"

[dependencies]
bytes = ">=1.1.0"
rustygear = { path = "../rustygear" , version = ">= 0.11.0" }
log = ">=0.4.8"
env_logger = { version = ">=0.10.1" , features = ["auto-color", "humantime"] }
tokio = { version = "1.15.0", features = ["full"] }
tokio-util = { version = "0.6.9", features = ["codec"] }
tower-service = "0.3"
futures = "0.3"
wrappinghashset = ">=0.4.1"
clap = "2.33"
futures-sink = "0.3"
