[package]
name = "rustygeard"
description = "An experimental, full-featured gearman server."
version = "0.13.0"
authors = ["Clint Byrum <clint@fewbar.com>"]
license = "Apache-2.0"
edition = "2018"
keywords = ["gearman", "server"]
repository = "https://github.com/SpamapS/rustygear"

[features]
tls = ["dep:tokio-rustls","dep:rustls-pemfile","rustygear/tls"]

[dependencies]
bytes = ">=1.1.0"
rustygear = { path = "../rustygear" , version = ">= 0.13.0" }
log = ">=0.4.8"
env_logger = { version = ">=0.10.1" , features = ["auto-color", "humantime"] }
tokio = { version = "1.37.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["codec"] }
tower-service = "0.3"
futures = "0.3"
wrappinghashset = ">=0.5.0"
clap = { version = "4.5" , features = ["cargo"] }
futures-sink = "0.3"
uuid = { version = "1.8.0", features = ["v4"] }
tokio-rustls = { version = "0.26.0", optional = true }
rustls-pemfile = { version = "2.1.2", optional = true }
